--- a/en/meta.yml
+++ b/en/meta.yml
@@ -10,9 +10,9 @@ version: 4.0.0
 last_tested: "2019-06-04"
 steps:
   - title: Introduction
-  - title: Create new project to recognise numbers
-  - title: Entering data
-  - title: Train new machine learning model
+  - title: Create a new project to recognise numbers
+  - title: Enter your survey data
+  - title: Train a new machine learning model
   - title: Test your model
   - title: "Challenge: use your model in Scratch"
     challenge: true
