--- a/nl-NL/meta.yml
+++ b/nl-NL/meta.yml
@@ -8,13 +8,15 @@ copyedit: true
 technologies: scratch
 software: scratch
 version: 4.0.1
-last_tested: "2019-06-04"
+last_tested: '2019-06-04'
 steps:
-  - title: Inleiding
-  - title: Maak een nieuw project om getallen te herkennen
-  - title: Voer je enquêtegegevens in
-  - title: Train een nieuw model voor machine learning
-  - title: Test je model
-  - title: "Uitdaging: gebruik je model in Scratch"
-    challenge: true
-  - title: Wat kun je verder nog doen?
+- title: Inleiding
+  completion: engaged
+- title: Maak een nieuw project om getallen te herkennen
+- title: Voer je enquêtegegevens in
+- title: Train een nieuw model voor machine learning
+  completion: internal
+- title: Test je model
+- title: 'Uitdaging: gebruik je model in Scratch'
+  challenge: true
+- title: Wat kun je verder nog doen?
