--- a/nl-NL/meta.yml
+++ b/nl-NL/meta.yml
@@ -11,12 +11,14 @@ version: 4.0.1
 last_tested: '2019-06-04'
 steps:
 - title: Inleiding
-  completion: engaged
 - title: Maak een nieuw project om getallen te herkennen
 - title: Voer je enquêtegegevens in
+  completion:
+  - engaged
 - title: Train een nieuw model voor machine learning
-  completion: internal
 - title: Test je model
+  completion:
+  - internal
 - title: 'Uitdaging: gebruik je model in Scratch'
   challenge: true
 - title: Wat kun je verder nog doen?
