--- a/en/meta.yml
+++ b/en/meta.yml
@@ -3,7 +3,7 @@ title: Journey to school
 hero_image: images/banner.png
 description: Train a computer to guess how your classmates get to school
 theme: orange
-listed: true
+listed: false
 copyedit: true
 technologies: scratch
 software: scratch
